--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,5 @@
-<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="pgGYBe" data-pen-title="Daily UI #004: Calculator" data-user="supah" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/supah/pen/pgGYBe">
+<iframe height="300" style="width: 100%;" scrolling="no" title="Daily UI #004: Calculator" src="https://codepen.io/supah/embed/pgGYBe?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+  See the Pen <a href="https://codepen.io/supah/pen/pgGYBe">
   Daily UI #004: Calculator</a> by Fabio Ottaviani (<a href="https://codepen.io/supah">@supah</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+  on <a href="https://codepen.io">CodePen</a>.
+</iframe>
